[metadata]
name = apicache-proxy
version = 0.1.0
author = apicache-proxy contributors
description = Lightweight local caching proxy for REST APIs to reduce redundant calls during development.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/example/apicache-proxy
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Internet :: WWW/HTTP
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
python_requires = >=3.9
install_requires =
    requests>=2.28

[options.entry_points]
console_scripts =
    apicache-proxy = apicache_proxy.cli:main

[options.extras_require]
dev =
    pytest>=7.0
    pytest-cov
    responses

[tool:pytest]
testpaths = tests
addopts = --tb=short -q

[flake8]
max-line-length = 99
exclude = .git,__pycache__,.venv
